--- a/test.html
+++ b/test.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lightbox Photo Gallery</title>
-    <link rel="stylesheet" href="test.css">
+    <link rel="stylesheet" href="css/test.css">
 </head>
 <body>
+
+    <h1>JS Lightbox Example</h1>
+
     <div class="gallery">
         <img src="img/img1.jpg" alt="Photo 1" class="thumbnail">
         <img src="img/img2.jpg" alt="Photo 2" class="thumbnail">
         <img src="img/img3.jpg" alt="Photo 3" class="thumbnail">
+        <img src="img/img4.jpg" alt="Photo 4" class="thumbnail">
+        <img src="img/img5.jpg" alt="Photo 5" class="thumbnail">
         <!-- Add more images as needed -->
     </div>
 
@@ -20,6 +25,6 @@
         <span class="prev">&#10094;</span>
         <span class="next">&#10095;</span>
     </div>
-    <script src="test.js"></script>
+    <script src="js/test.js"></script>
 </body>
 </html>
